fix: Broken paths and layout issues on small screens.

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,6 @@ button {
   }
 
   .container-grid.layout-section.navigation {
-    padding-top: 15px;
     background-color: #fff;
     -ms-flex-pack: center;
     -webkit-box-pack: center;
